--- a/gb/ncid278_7.md
+++ b/gb/ncid278_7.md
@@ -1,4 +1,14 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/fjHps" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>中国人权</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/asdfghy6/yh/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/asdfghy6/fq/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488590.md#1" target="_blank">2019年上半年 长春法轮功学员遭迫害综述</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488590.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/2019-8-29-mh-changchun-persecution-1-150x120.png" align ="left"></a>1月至6月，吉林省长春市法轮功学员遭长春政法委和专门迫害法轮功的非法机构“610”迫害，导致宋兆恒、张援援在迫害中离世，至少27人遭非法判刑或庭审，78人（含一位法轮功学员家属）遭绑架，21人遭骚扰。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 5:29 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/2/n11494616.md#1" target="_blank">重庆法轮功学员遭非法抄家 采集血样</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/2/n11494616.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/maxresdefault-150x120.jpg" align ="left"></a>重庆南岸区，老年法轮功学员76岁的刘昌秀和75岁的周良荣分别在2019年8月22日、23日被非法抄家，劫持到派出所按指纹、采血样。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 4:52 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/2/n11494145.md#1" target="_blank">北京英特尔软件公司女员工刘东兴 遭非法判刑</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/2/n11494145.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/youxing_10-150x120.jpg" align ="left"></a>北京英特尔软件公司现年32岁的刘东兴女士，坚持修炼法轮功“真善忍”，被非法判三年半。刘东兴不承认非法“判决”，要求上诉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 12:15 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/2/n11494136.md#1" target="_blank">南京高校教室装人脸识别引吐槽：给领导装上</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/2/n11494136.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/ss-1-150x120.jpg" align ="left"></a>江苏南京的中国药科大学在校园及部分教室引入人脸识别系统，学生听课情况会被全程监控，学生发呆、打瞌睡和玩手机等行为，随时会被监测及发现。消息在网上引发强烈吐槽，炮轰学校变态，并纷纷建议把“人脸识别”安装到中共各级政府部门。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 12:15 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/2/n11492546.md#1" target="_blank">组图：多国法轮功学员伦敦守夜 悼遇难同修</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/2/n11492546.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1909012222592188-150x120.jpg" align ="left"></a> 有这样一盏烛光，闪亮了十七年；有这样一群人，十七年来每一天每一小时都坚守在中共驻伦敦大使馆前静坐，用和平方式向世人讲述真相。从2002年起，英国法轮大法弟子在中领馆馆前锲而不舍的坚持，蕴含了巨大的力量，展现了法轮功学员坚毅不屈的高贵风貌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月02日 7:53 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/1/n11492305.md#1" target="_blank">抗议者步行撤离 数百私家车发起义载救援</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/1/n11492305.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/photo_2019-09-02_06-57-34-1-150x120.jpg" align ="left"></a>大批抗议者9月1日响应网上号召，到机场“和你塞”抗议，继续向政府施压。港铁配合港府与警方行动，停开机场快线与东涌线，示威者只能徒数小时返回本岛，中途有大批私家车发起#backhome救援行动，义载抗议者安全回家。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月02日 4:14 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/1/n11491954.md#1" target="_blank">被剥夺退休金17年 退休校长张全兴冤死</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/1/n11491954.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/2019-8-31-euro-fahui-london-rally_03-150x120.jpg" align ="left"></a>河北张家口80岁的法轮功学员张全兴，坚持修炼法轮功，被迫害得家破人亡，其退休金17年被当局剥夺，靠别人救济维生，于2019年5月含冤离世。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月02日 2:00 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/31/n11490896.md#1" target="_blank">微信触角伸到海外 为境外用户带来哪些风险</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/31/n11490896.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/c098732f9da5c7128ae86118aeb6418a-150x120.jpg" align ="left"></a>中国的互联网是世界上监视和审查最多的网络空间之一，包括被广泛使用的微信。现在微信（WeChat ）使用扩张到海外，研究人员表示，微信在国外的使用令中共在全球扩张其监控和审查的范围。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月01日 2:05 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/1/n11491427.md#1" target="_blank">葛特曼：共同问责中共活摘器官的同谋犯</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/1/n11491427.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/48649247712_848cb21102_h-150x120.jpg" align ="left"></a>8月30日，来自30多个国家的部分法轮功学员齐聚英国伦敦，举行集会游行等活动，美国记者、作家伊森·葛特曼（Ethan Gutmann）在集会上发言，他呼吁全球制止中共活摘法轮功等良心犯器官的罪行，并问责中共的同谋犯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月01日 1:39 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488429.md#1" target="_blank">苦难中坚守希望 京城姐妹的跌宕人生（1）</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488429.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/60b8df8f39fab80b-150x120.jpg" align ="left"></a>“警察曾跟我说，如果这的监狱关不下会把你们关到新疆的大沙漠里去，现在沙漠里的监狱在扩建，在沙漠里你多少天都走不出来。即使逃出了监狱，你也逃不出沙漠，必定死在沙漠里。你在哪死的，你怎么死的，你经历了什么，是永远不会有人知道的。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月01日 7:29 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/31/n11490902.md#1" target="_blank">美媒记者的推文：一个近距离的香港</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/31/n11490902.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1908310614062188-150x120.jpg" align ="left"></a>香港成为全球的关注焦点，也成为全球媒体的战场。美国CBS新闻记者英若明（Ramy Inocencio）记录的香港8月31日抗议活动跟中共党媒《环球时报》总编胡锡进的完全不同。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月01日 6:46 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11487849.md#1" target="_blank">凄楚无助 一群苦难的中国孩子（1）</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11487849.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/0dafd9f5ba0552ceffc538e32175ab7d-150x120.jpg" align ="left"></a>年年中秋月圆时，多少孩子泪湿巾。在中国大陆，无数孩子仅仅因为父母或他们自己对法轮功“真、善、忍”的信仰与追求，而遭受迫害，失去了父母、失去学业、失去自由，甚至失去了所有的生存条件和做人的尊严。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月01日 1:12 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/31/n11490515.md#1" target="_blank">李文足第三次见王全璋：监狱给你吃啥药了</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/31/n11490515.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/7a581c7fec36c47504fff9b5daede0d6-150x120.jpg" align ="left"></a>8月30日上午，“709”律师王全璋的妻子李文足与亲友前往山东临沂监狱，在经历不明人员袭击等阻扰下终于见到了王全璋。与前次见到形似“木头人”的王全璋相比，这次他的状况似乎有些异常，谈话间他竟突然说出拒绝“保外就医”的话，这让李文足很恼火：监狱到底给你吃啥药了？狱方迅速掐断了通话。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月01日 12:30 AM							</td></tr>
@@ -17,19 +27,9 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488770.md#1" target="_blank">一家10人受迫害 英留学生中领馆前吁停止迫害</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488770.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/48648682091_a22ba791d3_h-150x120.jpg" align ="left"></a>在英国留学的珍妮特·冯（Janet Feng）周五（30日）在伦敦中领馆前讲述了她的家族10人因坚持修炼法轮功而在中国遭受迫害的情况。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月31日 2:53 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488875.md#1" target="_blank">美众院外委会挺香港 批中共“偏执与残忍”</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488875.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/6d76eb6cbd619fc979bdbbd670c1d471-600x400-150x120.jpg" align ="left"></a>香港8月31日反送中大游行之前，中共加剧“白色恐怖”，多位民主人士及曾向当局提交游行申请的人士被捕或被攻击，美国国会众议院外交委员会周五强烈点名批评中共。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月31日 2:41 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488944.md#1" target="_blank">英人口贩卖基金会负责人呼吁：制止迫害</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488944.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/48649248362_836f58fcf1_o-150x120.jpg" align ="left"></a>在伦敦成立的“中国法庭”（China Tribunal）的报告，揭露了在中国普遍存在的贩卖囚犯器官的现象，以及法轮功学员（在中国遭到被活摘器官）的遭遇。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月31日 2:32 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11487346.md#1" target="_blank">加拿大香港移民：不港独 只求尊重一国两制</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11487346.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/13-3-1-150x120.jpg" align ="left"></a>香港反送中运动已持续数月，中共强推送中条例虽暂时被搁浅，但并未完全撤销。反送中运动还在持续，港人诉求从最初的反对送中条例修订，扩大至要求普选权，释放被警方逮捕的示威民众，以及对警方执法行为进行独立调查等多个正当诉求。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月31日 1:57 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488884.md#1" target="_blank">EFOFG欧副主席：20年太久 停止迫害</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488884.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/48649247817_4f5cbdde1b_o-150x120.jpg" align ="left"></a>中共对法轮功学员的迫害动用了许多野蛮手段，包括酷刑、剥夺睡眠、强迫灌食，以及成千上万记录在案的谋杀。几乎是从迫害的初期开始，中共就大规模的摘取器官。他们甚至在很多情况下活体摘取器官——贩卖到国外以谋取利益。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月31日 1:51 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488734.md#1" target="_blank">见证过活摘器官的医生：唤醒世界 驱除中共</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488734.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/48649248312_918febd9b1_o-150x120.jpg" align ="left"></a>2019年8月30日，来自30多个国家的逾千名部分法轮大法学员在著名的“议会广场”集会，现场金灿灿的炼功服吸引了很多游人的注目，祥和美好的队列、慈悲动人的音乐让很多人非常感动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月31日 1:38 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488542.md#1" target="_blank">留学生炼法轮功遭迫害 伦敦中领馆前呼吁</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488542.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/48648313548_ab4bdff05c_h-150x120.jpg" align ="left"></a>英国青年法轮功学员杨笑展周五（30日）在中共驻伦敦大使馆前，讲述了他与他的家人修炼法轮大法并遭受中共迫害的经历。他希望通过分享这一亲身经历，使人们能更好地了解法轮大法。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月31日 12:33 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488398.md#1" target="_blank">欧洲法轮功集会 前大陆律师：请伸出援助之手</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488398.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/48648314023_c8e2e5c48f_h-150x120.jpg" align ="left"></a>8月30日，在英国伦敦举行的欧洲法轮功反迫害活动进入第二天。上午10点，来自30多个国家和地区的逾千名法轮功学员在中共驻伦敦大使馆前举行新闻发布会，谴责中共残酷迫害法轮功，并要求立即停止长达二十年之久的迫害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月30日 10:36 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488179.md#1" target="_blank">李文足第三次探监 一行人遭袭 手机被抢</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488179.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/400-150x120.jpg" align ="left"></a>8月30日上午，李文足与她的父亲、709其她几位家属，在山东临沂监狱等待会见王全璋时遭到暴徒突然袭击，李文足父亲的脸被划伤，王峭岭、原珊珊手机被抢摔坏，施暴者在警察的眼皮底下逃跑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月30日 10:25 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11487144.md#1" target="_blank">见证历史 吁列中共为恐怖组织签名超10万</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11487144.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/974a45330150eab8ac1405f6ddcdee1f-150x120.jpg" align ="left"></a>香港当局在反送中运动不断使用血腥暴力镇压港人，引发民众反弹。近日，一项要求把中共列为恐怖组织的白宫签名受到广泛关注，短短十几天内签名人数超过10万，令民众欢欣鼓舞。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月30日 5:40 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11487587.md#1" target="_blank">陆5岁童被医院活体实验 致多器官衰竭死亡</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11487587.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/50200009239445155956066946834_s-150x120.jpg" align ="left"></a>江苏5岁男童范裕喆因患白血病，去年在北京博仁医院治疗期间，被当作小白鼠进行细胞免疫治疗，导致全身排异、多项器官衰竭，不得已转院施行肺移植，今年5月最终因多器官衰竭死亡。目前，男童家属已将该医疗案件向北京市丰台区医学会申请医学鉴定。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月30日 5:28 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11487732.md#1" target="_blank">30多国法轮功学员聚伦敦 在著名景点洪法</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11487732.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/48642438366_5ccb244540_o1-150x120.jpg" align ="left"></a>“我曾经是一位太极拳教练，2012年我到了中国的武当山，因为我对气功非常好奇，中国一位中医大夫告诉我，在中国有一种气功是被禁止的。我当时听到这个消息非常吃惊，因此开始在网络上查询关于法轮大法的消息，当看到法轮大法的书时，我立刻就明白了：就是我要找的！我终于找到了法轮大法！”戈杰?查代（Gorger Cadez）说。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月30日 4:14 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/29/n11486599.md#1" target="_blank">坐“小凳子”—— 中共杀人不见血的酷刑</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/29/n11486599.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/2016-5-31-minghui-torture-smallstool-ss-150x120.jpg" align ="left"></a>在3平米的小黑屋里，他被强迫坐在一个仅约20厘米高、巴掌大小的板凳上。 从早一直坐到半夜，很快身体就承受到极限............<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月30日 9:47 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488447.md#1" target="_blank">河北女青年在北京遭劫持 父亲找女儿被扣留</a><br></h3>8月11日下午6点半，河北涞水县法轮功学员李爽乘坐北京121路公交车时，突然北京市西城区阜成门外派出所警察拦住了公交车，把她劫持到北京西城区看守所。她父亲去打听她的情况时被派出所扣留。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月02日 2:22 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/1/n11491214.md#1" target="_blank">河北医学专家李延春夫妇 遭非法判刑</a><br></h3>8月27日，河北省秦皇岛市法轮功学员李延春与妻子裴玉贤，遭非法判刑，李延春七年六个月，勒索罚金二万元；裴玉贤四年，勒索罚金五千元。夫妻俩当庭表示上诉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月01日 10:15 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/31/n11490027.md#1" target="_blank">公益人士程渊三人被批捕 家属遭株连陷困境</a><br></h3>公益法律机构长沙富能的程渊、刘大志、吴葛健雄，于8月26日被长沙市国安局以“涉嫌颠覆国家政权罪”批准逮捕。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月01日 1:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488258.md#1" target="_blank">中共军队镇压香港？港学者：机会不大</a><br></h3>香港中文大学中国研究中心客座教授林和立30日在“当前中国大陆的发展与挑战”国际研讨会上，回应香港情势时表示，初步研判北京当局不至于动用解放军镇港，目前习面临党内部分歧与批评，倘若习若未能妥善处理香港问题，避免文革错误再犯，将被视作“第二个毛主席”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月31日 2:45 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/29/n11486190.md#1" target="_blank">上海610宣传教育处副处长蒋绮琼被举报</a><br></h3>现任上海市“610”防范办宣传教育处副处长蒋绮琼，因长期参与迫害法轮功学员，现被举报到明慧网。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月30日 10:53 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488388.md#1" target="_blank">中、藏、台作家联合声援香港声明</a><br></h3>香港反送中抗争已经持续了2个多月，来自中共和港府的威胁，打压越演愈烈。民阵原计划8月31日，即中共人大8.31落闸5周年举行游行，但未获警方批准，上诉亦被驳回 。另，警方接连拘捕包括香港众志秘书长黄之锋及成员周庭在内的多名反送中青年。但香港民众的抗争不断获得了国际上的广泛声援，也获得来自大陆的一批人权人士和作家的支持。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月30日 9:38 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid278_6.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid278.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid278_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid278_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid278_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid278_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid278_6.md#1">6</a>&nbsp;&nbsp;7&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid278_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid278_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid278_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid278_8.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/asdfghy6/djy/blob/master/gb/ncid278_7.md#1<br><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid278_7.md#1"><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/asdfghy6/djy/blob/master/gb/ncid278_7.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid278_7.htm">http://www.epochtimes.com/gb/ncid278_7.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
